k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quoter
  labels:
    app.kubernetes.io/name: jpm-quoter
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/name: monitoring
