k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quoter-ingress
  namespace: quoter
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: traefik   # k3s default
  rules:
    - host: quoter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quoter-svc
                port:
                  number: 80
    - host: sentinel.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentinel-svc
                port:
                  number: 80
